--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
   <!-- About section -->
   <section class="about">
     <h2>O nama</h2>
+    <img src="./images/separator.png">
     <div class="about-content">
       <img src="images/farmer1.png" alt="Branje kafe">
       <p>U srcu planina Kolumbije, Luca Moreno stvorio je Atelier Noir iz strasti prema umjetnosti kafe. 
@@ -73,36 +74,38 @@
   <!-- Statistics section -->
 <section class="stats">
   <h2 class="stats-title">Atelier Noir u brojkama</h2>
+  <img src="./images/separator.png">
 
   <div class="stats-wrapper">
     <div class="stats-logo">
-      <img src="images/logo1.png" alt="Atelier Noir logo">
+      <img src="images/logo2.png" alt="Atelier Noir logo">
       <h3>Premium Coffee · Est. 1921</h3>
     </div>
 
     <div class="stats-numbers">
       <div>
-        <strong>10 000+</strong>
+        <strong class="counter" data-target="10000">10214</strong>
         <p>Prodanih šoljica kafe</p>
       </div>
       <div>
-        <strong>4.8</strong>
+        <strong class="counter" data-target="4.8">5</strong>
         <p>Zvjezdica na reviews</p>
       </div>
       <div>
-        <strong>25</strong>
+        <strong class="counter" data-target="25">28</strong>
         <p>Saradnji širom svijeta</p>
       </div>
       <div>
-        <strong>104</strong>
+        <strong class="counter" data-target="104">104</strong>
         <p>Godine postojanja</p>
       </div>
-    </div>
+  </div>
+
   </div>
 
   <div class="stats-call-to-action">
     <p>Želite biti dio naše priče?</p>
-    <button>Kontaktirajte nas</button>
+    <button href="./ponuda.html">Kontaktirajte nas</button>
   </div>
 </section>
 
@@ -110,29 +113,35 @@
 
   <!-- Footer -->
   <footer>
-    <div class="footer-content">
-      <div>
-        <h4>Proizvodi</h4>
-        <p>Auctor volutpat.</p>
-        <p>Fermentum turpis.</p>
-      </div>
-      <div>
-        <h4>Get the app</h4>
-        <img src="appstore.png" alt="App Store">
-        <img src="googleplay.png" alt="Google Play">
-      </div>
-      <div>
-        <h4>Kontaktirajte nas</h4>
-        <p>ateliernoir@gmail.com</p>
-        <p>+1 2345 6789</p>
-        <p>123 Sokol, Zenica, BiH</p>
+  <div class="footer-content">
+    <div class="footer-column">
+      <h4>Proizvodi</h4>
+      <p>Auctor volutpat</p>
+      <p>Fermentum turpis</p>
+    </div>
+
+    <div class="footer-column">
+      <h4>Get the app</h4>
+      <div class="app-icons">
+        <img src="./images/appstore.png" alt="App Store">
+        <img src="./images/googleplay.png" alt="Google Play">
       </div>
     </div>
-    <div class="bottom-footer">
-      <img src="logo.svg" alt="Atelier Noir Logo">
-      <p>© 2025 Atelier Noir. All rights reserved.</p>
+
+    <div class="footer-column">
+      <h4>Kontaktirajte nas</h4>
+      <p>ateliernoir@gmail.com</p>
+      <p>+387 62 848 557</p>
+      <p>Štrosmajerova, Zenica</p>
     </div>
-  </footer>
+  </div>
+
+  <div class="bottom-footer">
+    <img src="./images/logo3.png" alt="Atelier Noir Logo">
+    <p>© 2025 Atelier Noir. All rights reserved.</p>
+  </div>
+</footer>
+
   <script src="./script.js"></script>
 
 </body>
