--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="bs">
 <head>
   <link href='https://fonts.googleapis.com/css?family=Playfair Display' rel='stylesheet'>
+  <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet" />
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Atelier Noir</title>
@@ -63,7 +64,7 @@
     <img src="./images/separator.png">
     <div class="about-content">
       <img src="images/farmer1.png" alt="Branje kafe">
-      <p>U srcu planina Kolumbije, Luca Moreno stvorio je Atelier Noir iz strasti prema umjetnosti kafe. 
+      <p class="o_nama">U srcu planina Kolumbije, Luca Moreno stvorio je Atelier Noir iz strasti prema umjetnosti kafe. 
          Svaka šoljica naše premium kafe donosi autentičnost organskog uzgoja i ručne obrade, 
          kombinuirajući prošlost i budućnost u svakom gutljaju.</p>
       <img src="images/farmer2.png" alt="Proizvođač kafe">
@@ -132,7 +133,7 @@
       <h4>Kontaktirajte nas</h4>
       <p>ateliernoir@gmail.com</p>
       <p>+387 62 848 557</p>
-      <p>Štrosmajerova, Zenica</p>
+      <p>123 Sokak, Zenica</p>
     </div>
   </div>
 
