--- a/ponuda.html
+++ b/ponuda.html
@@ -10,18 +10,20 @@
 <body>
 
   <nav class="navbar" id="navbar">
-    <div class="logo">Atelier Noir</div>
 
     <!-- Hamburger icon -->
     <div class="hamburger" id="hamburger">&#9776;</div>
 
     <!-- Navigation links -->
-    <ul class="nav-links" id="navLinks">
-      <li><a href="./index.html">Početna</a></li>
-      <li><a href="./o_nama.html">O nama</a></li>
-      <li><a href="./ponuda.html">Ponuda</a></li>
-      <li><a href="./kontakt.html">Kontakt</a></li>
-    </ul>
+    <div class ="left-group">
+      <div class="logo">Atelier Noir</div>
+      <ul class="nav-links" id="navLinks">
+        <li><a href="./index.html">Početna</a></li>
+        <li><a href="./o_nama.html">O nama</a></li>
+        <li><a href="./ponuda.html">Ponuda</a></li>
+        <li><a href="./kontakt.html">Kontakt</a></li>
+      </ul>
+    </div>
 
     <!-- Auth buttons -->
     <div class="auth-buttons" id="authButtons">
@@ -47,48 +49,59 @@
 <!-- Recommended -->
 <section class="selection">
   <h2>Naše preporuke</h2>
+  <img class="separator" src="./images/separator.png">
   <div class="coffee-cards" id="recommended"></div>
 </section>
 
 <!-- Best Sellers -->
-<section class="selection" style="background: linear-gradient(to bottom, #111, #222);">
-  <h2>Best Selleri</h2> <!-- ispravljeno: <h2>, a ne <h2s> -->
+<section class="selection" style="background-image: linear-gradient(to right, rgba(0,0,0,1), rgba(0,0,0,0), rgba(0,0,0,1)),url(./images/pozadina2.png);height:90vh">
+  <h2>Best Selleri</h2>
+  <img class="separator" src="./images/separator.png">
   <div class="coffee-cards" id="bestsellers"></div>
 </section>
 
 <!-- All Products -->
-<section class="selection">
-  <h2>Svi Proizvodi</h2>
+<section class="selection" style="background-image: url(./images/pozadina3.png);background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;">
+  <h2>Svi Proizvodi</h2>      
+  <img class="separator" src="./images/separator.png">
   <div class="coffee-cards" id="all-products"></div>
-  <a href="#" class="btn">Istražite sve</a>
+  <a href="#" class="btn" id="show-all" style="margin-top: 3 rem;margin-bottom: 3rem;">Prikaži sve</a>
 </section>
 
   <!-- Footer -->
   <footer>
-    <div class="footer-content">
-      <div>
-        <h4>Proizvodi</h4>
-        <p>Auctor volutpat.</p>
-        <p>Fermentum turpis.</p>
-      </div>
-      <div>
-        <h4>Get the app</h4>
-        <img src="appstore.png" alt="App Store">
-        <img src="googleplay.png" alt="Google Play">
-      </div>
-      <div>
-        <h4>Kontaktirajte nas</h4>
-        <p>ateliernoir@gmail.com</p>
-        <p>+1 2345 6789</p>
-        <p>123 Sokol, Zenica, BiH</p>
-      </div>
+  <div class="footer-content">
+    <div class="footer-column">
+      <h4>Proizvodi</h4>
+      <p>Auctor volutpat</p>
+      <p>Fermentum turpis</p>
     </div>
-    <div class="bottom-footer">
-      <img src="logo.svg" alt="Atelier Noir Logo">
-      <p>© 2025 Atelier Noir. All rights reserved.</p>
-    </div>
-  </footer>
 
-  <script src="script.js"></script>
+    <div class="footer-column">
+      <h4>Get the app</h4>
+      <div class="app-icons">
+        <img src="./images/appstore.png" alt="App Store">
+        <img src="./images/googleplay.png" alt="Google Play">
+      </div>
+    </div>
+
+    <div class="footer-column">
+      <h4>Kontaktirajte nas</h4>
+      <p>ateliernoir@gmail.com</p>
+      <p>+387 62 848 557</p>
+      <p>123 Sokak, Zenica</p>
+    </div>
+  </div>
+
+  <div class="bottom-footer">
+    <img src="./images/logo3.png" alt="Atelier Noir Logo">
+    <p>© 2025 Atelier Noir. All rights reserved.</p>
+  </div>
+</footer>
+
+  <script src="./script.js"></script>
+
 </body>
 </html>
