--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 
     <!-- Auth buttons -->
     <div class="auth-buttons" id="authButtons">
-      <a href="#" class="btn">Prijava</a>
-      <a href="#" class="btn primary">Registracija</a>
+      <a href="./registracija/log-in.html" class="btn">Prijava</a>
+      <a href="./registracija/sign-up.html" class="btn primary">Registracija</a>
     </div>
   </nav>
 
