--- a/registracija/log-in.html
+++ b/registracija/log-in.html
@@ -7,13 +7,18 @@
 </head>
 <body>
   <div class="container">
-    <h1>Prijavi se</h1>
-    <form action="/login" method="POST">
-      <input type="email" name="username" placeholder="Email" required />
-      <input type="password" name="password" placeholder="Lozinka" required />
-      <button type="submit">Prijavi se</button>
-    </form>
-    <p>Nemaš nalog? <a href="sign-up.html">Registruj se</a></p>
+    <div class="left">
+      <h1>Prijavi se</h1>
+      <form class="form-wrapper" action="/login" method="POST">
+        <input type="email" name="username" placeholder="Email" required />
+        <input type="password" name="password" placeholder="Lozinka" required />
+        <button type="submit">Prijavi se</button>
+      </form>
+      <div class="links">
+        <p>Nemaš nalog? <a href="sign-up.html">Registruj se</a></p>
+      </div>
+    </div>
+    <div class="right"></div>
   </div>
 </body>
 </html>
