--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 
     <!-- Auth buttons -->
     <div class="auth-buttons" id="authButtons">
-      <a href="./registracija/log-in.html" class="btn">Prijava</a>
-      <a href="./registracija/sign-up.html" class="btn primary">Registracija</a>
+      <a href="registracija/log-in.html" class="btn">Prijava</a>
+      <a href="registracija/sign-up.html" class="btn primary">Registracija</a>
     </div>
   </nav>
 
@@ -106,7 +106,7 @@
 
   <div class="stats-call-to-action">
     <p>Želite biti dio naše priče?</p>
-    <button href="./ponuda.html">Kontaktirajte nas</button>
+      <a href="kontakt.html" class="btn primary">Kontaktirajte nas</a>
   </div>
 </section>
 
