--- a/ponuda.html
+++ b/ponuda.html
@@ -15,7 +15,7 @@
     <div class="hamburger" id="hamburger">&#9776;</div>
 
     <!-- Navigation links -->
-    <div class ="left-group">
+     <div class ="left-group">
       <div class="logo">Atelier Noir</div>
       <ul class="nav-links" id="navLinks">
         <li><a href="./index.html">Početna</a></li>
@@ -27,8 +27,8 @@
 
     <!-- Auth buttons -->
     <div class="auth-buttons" id="authButtons">
-      <a href="#" class="btn">Prijava</a>
-      <a href="#" class="btn primary">Registracija</a>
+      <a href="registracija/log-in.html" class="btn">Prijava</a>
+      <a href="registracija/sign-up.html" class="btn primary">Registracija</a>
     </div>
   </nav>
 
