--- a/kontakt.html
+++ b/kontakt.html
@@ -9,24 +9,28 @@
 </head>
 <body>
 
-  <!-- NAVBAR -->
   <nav class="navbar" id="navbar">
+
+    <!-- Hamburger icon -->
     <div class="hamburger" id="hamburger">&#9776;</div>
-    <div class="left-group">
+
+    <!-- Navigation links -->
+     <div class ="left-group">
       <div class="logo">Atelier Noir</div>
       <ul class="nav-links" id="navLinks">
-        <li><a href="index.html">Početna</a></li>
-        <li><a href="o_nama.html">O nama</a></li>
-        <li><a href="ponuda.html">Ponuda</a></li>
-        <li><a href="kontakt.html">Kontakt</a></li>
+        <li><a href="./index.html">Početna</a></li>
+        <li><a href="./o_nama.html">O nama</a></li>
+        <li><a href="./ponuda.html">Ponuda</a></li>
+        <li><a href="./kontakt.html">Kontakt</a></li>
       </ul>
     </div>
+
+    <!-- Auth buttons -->
     <div class="auth-buttons" id="authButtons">
-      <a href="#" class="btn">Prijava</a>
-      <a href="#" class="btn primary">Registracija</a>
+      <a href="registracija/log-in.html" class="btn">Prijava</a>
+      <a href="registracija/sign-up.html" class="btn primary">Registracija</a>
     </div>
   </nav>
-
   <!-- KONTAKT SEKCIJA -->
   <section class="contact">
     <div class="contact-content">
